tests/fsharp/typecheck/sigs/neg21.bsl

neg21.fs(12,20,12,23): typecheck error FS0001: The type 'float' does not match the type 'float<kg>'

neg21.fs(12,18,12,19): typecheck error FS0043: The type 'float' does not match the type 'float<kg>'

neg21.fs(13,19,13,28): typecheck error FS0001: The unit of measure 'sqrm' does not match the unit of measure 's'

neg21.fs(13,17,13,18): typecheck error FS0043: The unit of measure 'sqrm' does not match the unit of measure 's'

neg21.fs(14,19,14,23): typecheck error FS0001: The type 'float32' does not match the type 'float<'u>'

neg21.fs(14,17,14,18): typecheck error FS0043: The type 'float32' does not match the type 'float<'u>'

neg21.fs(17,26,17,34): typecheck error FS0001: Type mismatch. Expecting a
    'float<s ^ 3>'    
but given a
    'float<s ^ 4>'    
The unit of measure 's ^ 3' does not match the unit of measure 's ^ 4'

neg21.fs(19,59,19,67): typecheck error FS0001: Type mismatch. Expecting a
    'area'    
but given a
    'float<m ^ 3>'    
The unit of measure 'sqrm' does not match the unit of measure 'm ^ 3'

neg21.fs(20,36,20,44): typecheck error FS0001: Type mismatch. Expecting a
    'area'    
but given a
    'float<m ^ 3>'    
The unit of measure 'sqrm' does not match the unit of measure 'm ^ 3'

neg21.fs(21,53,21,59): typecheck error FS0001: Type mismatch. Expecting a
    'float<s ^ 2>'    
but given a
    'float<m>'    
The unit of measure 's ^ 2' does not match the unit of measure 'm'

neg21.fs(22,17,22,21): typecheck error FS0001: The unit of measure 's ^ 4' does not match the unit of measure 'sqrm'

neg21.fs(22,15,22,16): typecheck error FS0043: The unit of measure 's ^ 4' does not match the unit of measure 'sqrm'

neg21.fs(23,11,23,18): typecheck error FS0001: The type 'float<kg>' does not match the type 'float'
